--- a/index.html
+++ b/index.html
@@ -6,12 +6,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shoes | TOP models</title>
     <link rel="stylesheet" href="./css/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+    </style>
 </head>
 
 <body>
-    
+
+    <!-- Page contain -->
+    <div class="container">
+
+        <!-- Fixed head -->
+        <header>
+
+            <div class="number_contain">
+
+                <span class="number one"></span class="number two"><span></span class="number three"><span></span>
+
+            </div>
+
+        </header>
+        <!-- end Fixed head -->
+
+
+        <div class="contain red">
+
+            <div class="img_contain">
+                <img class="shoes_img" src="./img/01.png" alt="">
+            </div>
+
+            <h1 class="shoes_txt">IL NOSTRO MODELLO <br> DI PUNTA</h1>
+
+        </div>
+
+        <div class="contain green">
+
+            <div class="img_contain">
+                <img class="shoes_img" src="./img/02.png" alt="">
+            </div>
+
+            <h1 class="shoes_txt">IL NOSTRO MODELLO <br> DI PUNTA</h1>
+
+        </div>
+
+        <div class="contain yellow">
+
+            <div class="img_contain">
+                <img class="shoes_img" src="./img/03.png" alt="">
+            </div>
+
+            <h1 class="shoes_txt">IL NOSTRO MODELLO <br> DI PUNTA</h1>
+
+        </div>
+
+
+
+
+
+
+
+    </div>
+    <!-- end Page contain -->
+
 </body>
 
 </html>
