Complete fix header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+        body{
+            font-family: 'Rubik Mono One', sans-serif;
+        }
     </style>
 </head>
 
@@ -19,11 +22,15 @@
     <div class="container">
 
         <!-- Fixed head -->
-        <header>
+        <header class="fix_head">
 
             <div class="number_contain">
 
-                <span class="number one"></span class="number two"><span></span class="number three"><span></span>
+                <span class="number one">1</span>&nbsp
+
+                <span class="number two">2</span>&nbsp
+
+                <span class="number three">3</span>
 
             </div>
 
