End exercise number 8

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 
             <div class="number_contain">
 
-                <span class="number one">1</span>&nbsp
+                <a href="#first" class="number one">1</a>&nbsp
 
-                <span class="number two">2</span>&nbsp
+                <a href="#second" class="number two">2</a>&nbsp
 
-                <span class="number three">3</span>
+                <a href="#third" class="number three">3</a>
 
             </div>
 
         </header>
         <!-- end Fixed head -->
 
-
-        <div class="contain red">
+        <!-- Shoes -->
+        <div id=first class="contain red">
 
             <div class="img_contain">
                 <img class="shoes_img" src="./img/01.png" alt="">
@@ -48,7 +48,7 @@
 
         </div>
 
-        <div class="contain green">
+        <div id=second class="contain green">
 
             <div class="img_contain">
                 <img class="shoes_img" src="./img/02.png" alt="">
@@ -58,7 +58,7 @@
 
         </div>
 
-        <div class="contain yellow">
+        <div id=third class="contain yellow">
 
             <div class="img_contain">
                 <img class="shoes_img" src="./img/03.png" alt="">
@@ -67,6 +67,7 @@
             <h1 class="shoes_txt">IL NOSTRO MODELLO <br> DI PUNTA</h1>
 
         </div>
+        <!-- end Shoes -->
 
 
 
