Fix general warning

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
             <div class="number_contain">
 
-                <a href="#first" class="number one">1</a>&nbsp
+                <a href="#first" class="number">1</a>
 
-                <a href="#second" class="number two">2</a>&nbsp
+                <a href="#second" class="number">2</a>
 
-                <a href="#third" class="number three">3</a>
+                <a href="#third" class="number">3</a>
 
             </div>
 
@@ -41,7 +41,7 @@
         <div id=first class="contain red">
 
             <div class="img_contain">
-                <img class="shoes_img" src="./img/01.png" alt="">
+                <img class="shoes_img" src="./img/01.png" alt="Differente blue shoes">
             </div>
 
             <h1 class="shoes_txt">IL NOSTRO MODELLO <br> DI PUNTA</h1>
@@ -51,7 +51,7 @@
         <div id=second class="contain green">
 
             <div class="img_contain">
-                <img class="shoes_img" src="./img/02.png" alt="">
+                <img class="shoes_img" src="./img/02.png" alt="Tommy Hilfiger white shoes">
             </div>
 
             <h1 class="shoes_txt">IL NOSTRO MODELLO <br> DI PUNTA</h1>
@@ -61,7 +61,7 @@
         <div id=third class="contain yellow">
 
             <div class="img_contain">
-                <img class="shoes_img" src="./img/03.png" alt="">
+                <img class="shoes_img" src="./img/03.png" alt="Converse All Star bluemarine shoes">
             </div>
 
             <h1 class="shoes_txt">IL NOSTRO MODELLO <br> DI PUNTA</h1>
